--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,17 +9,9 @@ description = "A benchmarking framework for multi-robot path planning"
 readme = "readme.md"
 requires-python = ">=3.8"
 dependencies = [
-    "robotic",
+    "robotic==0.2.2",
     "numpy>=1.21.0",
-    "networkx>=2.6.0",
     "matplotlib>=3.4.0"
-]
-
-[project.optional-dependencies]
-dev = [
-    "pytest>=6.2.0",
-    "mypy>=0.910",
-    "black>=21.5b1"
 ]
 
 [tool.setuptools]
