--- a/examples/config.yaml
+++ b/examples/config.yaml
@@ -3,32 +3,32 @@ description: |
   General
 
 step_size: 0.25                             # Max allowable distance that newly generated node can be from the nearest node in the tree                    
-ptc_threshold: 0.01 #!!float 1e-10          # Converge Threshold
-ptc_max_iter: 15000                         # Max iteration with no change before stopping
 amount_of_runs: 1                           # Amount of runs executed 
-debug_mode: false                           # True: Data isn't stored, as in debug modus
+debug_mode: true                            # True: Data isn't stored, as in debug modus
 use_seed: true                              # True: Use a seed for the algorithm
-seed:  2258816130                                    # User defined seed
-cprofiler: true                             # Use cprofiler to run the 
-cost_type: euclidean                        # Type of cost function: 'euclidean' (Max euclidean norm),  '-' (Chebyshev (= greatest diff in any dimension))
-dist_type: euclidean                        # Type of dist function: 'euclidean' (Max euclidean norm),  '-' (Chebyshev (= greatest diff in any dimension))
+seed:  10                           # User defined seed
+cprofiler: true                            # Use cprofiler to run the 
+cost_type: max_euclidean                        # Type of cost function: 'euclidean' (Max euclidean norm),  '-' (Chebyshev (= greatest diff in any dimension))
+dist_type: max_euclidean                        # Type of dist function: 'euclidean' (Max euclidean norm),  '-' (Chebyshev (= greatest diff in any dimension))
 shortcutting: true                          # Include Shortcutting after solution found
+ptc_time : 40                              # Time for termination in sec
+
 
 description: |
   Sampling strategy
 
-p_goal: 0.9                                # Probability of performing goal sampling
-p_stay: 0.3                                  # Probability that robot stays in its pose (home pose) (if 1: isn't included)
+p_goal: 0.9                                 # Probability of performing goal sampling
+p_stay: 0.3                                 # Probability that robot stays in its pose (home pose) (if 1: isn't included)
 general_goal_sampling: false                # True: For all tasks in mode goal sampling is done otherwise only for active task
-mode_probability: None                      # Probability to choose new mode (0: unfiormly, 1: greedy None: equally, else: manually set) 
+mode_probability: None                      # Probability to choose new mode (0: uniformly, 1: greedy None: equally, else: manually set) 
 informed_sampling: false                    # True: Informed sampling is applied 
 informed_sampling_version: 2                # If 'informed_sampling: true', the specified version is applied (0: Only regarding agent, 1: Including other agents 2: corrected 1)
-
+gaussian: false
 
 description: |
   Bi-RRT*
 
-transition_nodes: 100                        # Number of generated transition nodes during mode initialization (only used in bi-rrt*)
+transition_nodes: 1                        # Number of generated transition nodes during mode initialization (only used in bi-rrt*)
 birrtstar_version: 2                        # Version of Bi-RRT*: 1: Inspired by Bi-RRT* by b. Wang 2: Inspired by RRT-Connect by JJ. Kuffner/ RRT*-Connect by S.Klemm
 
 
@@ -42,8 +42,8 @@ depth: 2                                    # User-defined depth parameter for t
 description: |
   dRRT*
 
-batch_size: 20000                            # Batch size for explicit grapths Gi to create implicit graph G
-expand_iter: 50                            # Amount of iterations done in the expand funciton (grow the tree)
+batch_size: 400                            # Batch size for explicit grapths Gi to create implicit graph G
+expand_iter: 10                            # Amount of iterations done in the expand funciton (grow the tree)
 
  
 
@@ -60,4 +60,4 @@ description: |
 # adapt goal radius for more DOF -> make it dependent on DOF
 # TODO's in planner.py and env.py
 # Handle singularities properly!
-# ATTENTION: The assumption is made that dist_type and cost_type are the same for the batch_config_torch function as it makes the algorithm more efficient -> would be easy changeable if necessary
+# ATTENTION: The assumption is made that dist_type and cost_type are the same for the batch_cost_torch function as it makes the algorithm more efficient -> would be easy changeable if necessary
