--- a/examples/config.yaml
+++ b/examples/config.yaml
@@ -2,16 +2,18 @@
 description: |
   General
 
-step_size: 0.25                             # Max allowable distance that newly generated node can be from the nearest node in the tree                    
-amount_of_runs: 1                           # Amount of runs executed 
+step_size: 0.35                             # Max allowable distance that newly generated node can be from the nearest node in the tree                    
+amount_of_runs: 5                           # Amount of runs executed 
 debug_mode: true                            # True: Data isn't stored, as in debug modus
 use_seed: true                              # True: Use a seed for the algorithm
-seed:  10                           # User defined seed
-cprofiler: true                            # Use cprofiler to run the 
-cost_type: max_euclidean                        # Type of cost function: 'euclidean' (Max euclidean norm),  '-' (Chebyshev (= greatest diff in any dimension))
+seed:  1                           # User defined seed
+cprofiler: false                            # Use cprofiler to run the                     # Type of cost function: 'euclidean' (Max euclidean norm),  '-' (Chebyshev (= greatest diff in any dimension))
 dist_type: max_euclidean                        # Type of dist function: 'euclidean' (Max euclidean norm),  '-' (Chebyshev (= greatest diff in any dimension))
+cost_metric: euclidean
+cost_reduction: max
+
 shortcutting: true                          # Include Shortcutting after solution found
-ptc_time : 40                              # Time for termination in sec
+ptc_time : 600                              # Time for termination in sec
 
 
 description: |
@@ -20,9 +22,10 @@ description: |
 p_goal: 0.9                                 # Probability of performing goal sampling
 p_stay: 0.3                                 # Probability that robot stays in its pose (home pose) (if 1: isn't included)
 general_goal_sampling: false                # True: For all tasks in mode goal sampling is done otherwise only for active task
-mode_probability: None                      # Probability to choose new mode (0: uniformly, 1: greedy None: equally, else: manually set) 
+mode_probability: 1                      # Probability to choose new mode (0: uniformly, 1: greedy None: equally, else: manually set) 
 informed_sampling: false                    # True: Informed sampling is applied 
-informed_sampling_version: 2                # If 'informed_sampling: true', the specified version is applied (0: Only regarding agent, 1: Including other agents 2: corrected 1)
+informed_sampling_version: 0               # 0: Agent seperately 1: including path cost with all agents 2: random select start and goal 3: mixed version (0 and uniform) 4: random version 5: mixed version (0 and 1)
+p_uniform: 0.8                              #only used for version 3 in informed sampling version
 gaussian: false
 
 description: |
