--- a/examples/config.yaml
+++ b/examples/config.yaml
@@ -2,12 +2,12 @@
 description: |
   General
 
-step_size: 0.35                             # Max allowable distance that newly generated node can be from the nearest node in the tree                    
-amount_of_runs: 5                           # Amount of runs executed 
+step_size: 0.5                             # Max allowable distance that newly generated node can be from the nearest node in the tree                    
+amount_of_runs: 1                           # Amount of runs executed 
 debug_mode: true                            # True: Data isn't stored, as in debug modus
 use_seed: true                              # True: Use a seed for the algorithm
-seed:  1                           # User defined seed
-cprofiler: false                            # Use cprofiler to run the                     # Type of cost function: 'euclidean' (Max euclidean norm),  '-' (Chebyshev (= greatest diff in any dimension))
+seed:  4                           # User defined seed
+cprofiler: true                            # Use cprofiler to run the                     # Type of cost function: 'euclidean' (Max euclidean norm),  '-' (Chebyshev (= greatest diff in any dimension))
 dist_type: max_euclidean                        # Type of dist function: 'euclidean' (Max euclidean norm),  '-' (Chebyshev (= greatest diff in any dimension))
 cost_metric: euclidean
 cost_reduction: max
@@ -22,9 +22,9 @@ description: |
 p_goal: 0.9                                 # Probability of performing goal sampling
 p_stay: 0.3                                 # Probability that robot stays in its pose (home pose) (if 1: isn't included)
 general_goal_sampling: false                # True: For all tasks in mode goal sampling is done otherwise only for active task
-mode_probability: 1                      # Probability to choose new mode (0: uniformly, 1: greedy None: equally, else: manually set) 
-informed_sampling: false                    # True: Informed sampling is applied 
-informed_sampling_version: 0               # 0: Agent seperately 1: including path cost with all agents 2: random select start and goal 3: mixed version (0 and uniform) 4: random version 5: mixed version (0 and 1)
+mode_probability: 1                         # Probability to choose new mode (0: uniformly, 1: greedy None: equally, else: manually set) 
+informed_sampling: true                    # True: Informed sampling is applied 
+informed_sampling_version: 0               # 0: mixture uniform and locally, 1: whole config, 2: = 1 but each agent separately 3: local 4: random local 5: by valentin 
 p_uniform: 0.8                              #only used for version 3 in informed sampling version
 gaussian: false
 
