--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -88,10 +88,10 @@
             "program": "${workspaceFolder}/examples/run_analysis.py",
             "args": [
                 "tree_paper",
-                "shelves_no_rot",
-                "1",
+                "unordered_circle",
+                "10",
                 "--path_to_folder",
-                "/media/tirza/tirza/MasterThesis/out/20250413_215528_planner_demo_shelves_no_rot"
+                "/media/tirza/tirza/MasterThesis/out/20250418_184641_planner_demo_unordered_circle"
                 
 
             ],
