simpified invalid mode removal strategy

--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,7 @@ cmake_install.cmake
 examples/run_analysis.py
 examples/run_postprocess.py
 examples/analysis_util.py
+configs/demo/test.json
+configs/demo/test1.json
+.vscode/
+z.log.global
