--- a/.gitignore
+++ b/.gitignore
@@ -85,10 +85,9 @@ cache/
 /Makefile
 cmake_install.cmake
 
-examples/run_analysis.py
-examples/run_postprocess.py
-examples/analysis_util.py
 configs/demo/test.json
 configs/demo/test1.json
+configs/demo/test2.json
+configs/demo/test3.json
 .vscode/
 z.log.global
