--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,8 @@ dependencies = [
 [project.optional-dependencies]
 pinocchio = ["pin>=3.4" , "meshcat"]
 rai = ["robotic>=0.2.2,<0.3.0"]
-all = ["pin>=3.4", "meshcat", "robotic==0.2.2"]
+mujoco = ["mujoco"]
+all = ["pin>=3.4", "meshcat", "robotic>=0.2.2,<0.3.0", "mujoco"]
 
 [tool.setuptools]
 package-dir = {"" = "src"}
