--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,8 +22,8 @@ dependencies = [
 [project.optional-dependencies]
 pinocchio = ["pin>=3.4" , "meshcat"]
 rai = ["robotic>=0.2.2,<0.3.0"]
-mujoco = ["mujoco"]
-all = ["pin>=3.4", "meshcat", "robotic>=0.2.2,<0.3.0", "mujoco"]
+mujoco = ["mujoco", "mujoco-mjx"]
+all = ["pin>=3.4", "meshcat", "robotic>=0.2.2,<0.3.0", "mujoco", "mujoco-mjx"]
 
 [tool.setuptools]
 package-dir = {"" = "src"}
